--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -43,17 +43,25 @@ html {
             top: 0;
             width: 20px;
             height: 20px;
-            border: 3px solid #007bff;
-            border-radius: 50%;
+            border: 2px solid #007bff;
+            border-radius: 100%;
             background: #fff;
         }
 
     .custom-radio input[type="radio"]:checked + .form-check-label::before {
         background-color: #007bff;
-        box-shadow: inset 0 0 0 2px #fff;
+        box-shadow: inset 0 0 0 3px #fff;
     }
 
+.logo {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 
+.container {
+    padding:15px;
+}
 
 .a {
     cursor: pointer;
@@ -61,7 +69,14 @@ html {
 
 .footer {
     position: fixed;
-    left: 0;
     bottom: 0;
     width: 100%;
+    font-size:18px;
+}
+
+.login {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
 }
