--- a/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
@@ -9,7 +9,7 @@
         <div class="modal-content">
             <form id="formEntradaEstoque" method="post" asp-action="EntradaSaidaEstoque">
                 <div class="modal-header">
-                    <h5 class="modal-title">Entrada do Estoque</h5>
+                    <h5 class="modal-title">Entrada/Saída de Estoque</h5>
                 </div>
                 <div class="modal-body">
                     <div class="mb-1 ">
