--- a/Views/Manager/Modal/LoginManager.cshtml
+++ b/Views/Manager/Modal/LoginManager.cshtml
@@ -7,7 +7,7 @@
 <div id="modalLoginManager" class="modal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form id="formLoginManager" method="post" asp-action="ModalLoginManager" asp-controller="Manager">
+            <form id="formLoginManager" method="post" asp-action="Login" >
                 <div class="modal-header">
                     <h5 class="modal-title">Entrada do Estoque</h5>
                 </div>
@@ -17,6 +17,10 @@
                         <input required asp-for="Usuario" type="text" class="form-control mb-2" id="Usuario" placeholder="Usuario">
                         <input required asp-for="Senha" type="password" class="form-control mb-2" id="Senha" placeholder="Senha">
                     </div>
+                    @if (ViewBag.ErrorMessage != null)
+                    {
+                        <div class="alert alert-danger">@ViewBag.ErrorMessage</div>
+                    }
                 </div>
                 <div class="modal-footer">
                     <button type="submit" class="btn btn-secondary">Salvar</button>
@@ -28,14 +32,3 @@
 </div>
 
 <script src="~/js/ManagerScript.js"></script>
-
-
-
-
-
-
-
-
-
-
-<script src="~/js/ManageScript.js"></script>
