--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     
     <header class="card-header">
         <div class="login">
-            <a class="btn btn-outline-secondary" asp-action="ModalLoginManager" asp-controller="Manager">Login</a>
+            <a class="btn btn-outline-secondary" asp-action="LoginManager" asp-controller="Manager">Login</a>
         </div>
         <div class="logo">
             <a asp-area="" asp-controller="Estoque" asp-action="EstoqueIndex">
