--- a/Views/Registro/Modal/DeletarRegistro.cshtml
+++ b/Views/Registro/Modal/DeletarRegistro.cshtml
@@ -24,4 +24,26 @@
     </div>
 </div>
 
-<script src="~/js/ManageScript.js"></script>
+@* ////////// DELETAR TODOS OS REGISTROS //////////// *@
+
+<div id="modalDeletarAllRegistro" class="modal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form method="post" asp-action="DeletarAllRegistro">
+                <input asp-for="Id" type="hidden">
+                <div class="modal-header">
+                    <h5 class="modal-title">Excluir</h5>
+                </div>
+                <div class="modal-body">
+                    <p>Tem certeza que deseja excluir todos os itens?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-secondary">Sim</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+<script src="~/js/ManagerScript.js"></script>
