--- a/Views/Registro/RegistroIndex.cshtml
+++ b/Views/Registro/RegistroIndex.cshtml
@@ -1,8 +1,15 @@
-﻿@model IEnumerable<TOLEAGRI.Model.Domain.RegistroPeca>
+﻿@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Identity
+
+@model IEnumerable<TOLEAGRI.Model.Domain.RegistroPeca>
 @{
     ViewData["Title"] = "RegistroIndex";
     var RegistrosOrdenados = Model.OrderBy(c => c.CodigoSistema).ToList();
 }
+
+@{
+    var isAdmin = User.IsInRole("Admin");
+} 
 
 <div id="container" class="container">
     <div>
@@ -31,6 +38,14 @@
                 <th onclick="sortTableRegistros(7)">Usuário</th>
                 <th onclick="sortTableRegistros(8)">Data</th>
                 <th onclick="sortTableRegistros(9)">Entrada/Saída</th>
+                @if (isAdmin)
+                    {
+                        <th style="width:1px">
+                            <a onClick="ModalDeletarAllRegistro()">
+                                <i class="bi bi-trash3-fill"></i>
+                            </a>
+                        </th>
+                    }
             </tr>
         </thead>
         <tbody id="registros-list">
@@ -47,6 +62,14 @@
                     <td>@item.Usuario</td>
                     <td>@item.Data.ToShortDateString()</td>
                     <td>@item.EntradaOuSaida</td>
+                    @if (isAdmin)
+                    {
+                        <td style="width:1px">
+                            <a onClick="ModalDeletarRegistro(@item.Id)">
+                                <i class="bi bi-trash3-fill"></i>
+                            </a>
+                        </td>
+                    }
                 </tr>
             }
         </tbody>
@@ -54,3 +77,4 @@
 </div>
 
 <script src="~/js/RegistroScript.js"></script>
+<script src="~/js/ManagerScript.js"></script>
