icone branco e class css pra organizar

--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -12,7 +12,7 @@
 
 <div id="container" class="container">
     <div>
-        <div class="mb-4" style="display:flex;justify-content:space-between">
+        <div class="barra_tarefas">
             <div>
                 <a class="btn btn-outline-secondary" onClick="ModalEntradaSaidaEstoque()">
                     <img src="~/Images/abrirModalEntradaSaida.png" style="width:45px" />
