--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -85,3 +85,9 @@ input::placeholder {
     align-items: center;
     padding:100px;
 }
+
+.barra_tarefas{
+    display:flex;
+    justify-content:space-between;
+    margin-bottom:12px
+}
