--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <header >
         <div class="logo">
             <a asp-area="" asp-controller="Estoque" asp-action="EstoqueIndex">
-                <img src="~/Images/logo1.png" alt="Logo" style="width:150px" />
+                <img src="~/Images/logo3.png" alt="Logo" style="width:200px" />
             </a>
         </div>
 
@@ -28,11 +28,11 @@
         <div id="modalTOLEAGRI"></div>
     </div>
 
-    <footer class="footer text-muted text-center">
+    @* <footer class="footer text-muted text-center">
         <div class="card-footer">
                 Toleagri
         </div>
-    </footer>
+    </footer> *@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
