--- a/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaSaidaEstoque.cshtml
@@ -4,7 +4,7 @@
     Layout = null;
 }
 
-<div id="modalEntradaSaidaEstoque" class="modal" tabindex="-1">
+<div id="modalEntradaSaidaEstoque" class="modal custom-modal-bg" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <form id="formEntradaEstoque" method="post" asp-action="EntradaSaidaEstoque">
