--- a/Views/Registro/RegistroIndex.cshtml
+++ b/Views/Registro/RegistroIndex.cshtml
@@ -13,11 +13,15 @@
 
 <div id="container" class="container">
     <div>
-        <div class="mb-4" style="display:flex;justify-content:space-between">
-            <div></div>
+        <div class="barra_tarefas">
+            <div>
+                <a class="btn btn-outline-secondary ml-1" type="button" asp-controller="Estoque" asp-action="EstoqueIndex">
+                    <img src="/Images/abrirEstoque.png" alt="Logo" class="custom-logo" style="width:40px" />
+                </a>
+            </div>
             <div style="display:flex">
-                <input type="text" id="searchBarRegistro" style="height:40px;width:265px" class="form-control search" placeholder="Buscar" onkeydown="EnterRegistro(event)">
-                <input type="date" id="start-date" style="height:40px;width:150px" class="form-control search" placeholder="Data Inicial">
+                <input type="text" id="searchBarRegistro" style="height:40px;width:265px;margin-right:5px" class="form-control search" placeholder="Buscar" onkeydown="EnterRegistro(event)">
+                <input type="date" id="start-date" style="height:40px;width:150px;margin-right:5px" class="form-control search" placeholder="Data Inicial">
                 <input type="date" id="end-date" style="height:40px;width:150px" class="form-control search" placeholder="Data Final">
                 <a id="searchIconRegistros" onclick="searchIconRegistros()" style="cursor: pointer;">
                     <img src="~/Images/Pesquisa.png" style="width:25px;margin-top:5px;margin-left:5px" />
@@ -25,7 +29,7 @@
             </div>
         </div>
     </div>
-    <table class="table">
+    <table class="table table-hover table-bordered table-dark">
         <thead>
             <tr>
                 <th onclick="sortTableRegistros(0)">Código</th>
