--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -13,8 +13,11 @@
 <div id="container" class="container">
         <div class="barra_tarefas">
             <div>
-                <a class="btn btn-outline-secondary ml-1" onClick="ModalEntradaSaidaEstoque()">
-                    <img src="~/Images/abrirModalEntradaSaida.png" style="width:40px" />
+                <a class="btn btn-outline-secondary ml-1" onClick="ModalEntradaEstoque()">
+                    <img src="~/Images/abrirModalEntrada.png" style="width:40px" />
+                </a>
+                <a class="btn btn-outline-secondary ml-1" onClick="ModalSaidaEstoque()">
+                    <img src="~/Images/abrirModalEntrada.png" style="width:40px" />
                 </a>
                 <a class="btn btn-outline-secondary ms-1" type="button" asp-controller="Registro" asp-action="RegistroIndex">
                     <img src="/Images/abrirRegistro.png" alt="Relogio" class="custom-logo" style="width:43px;" />
