--- a/Views/Estoque/Modal/EntradaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaEstoque.cshtml
@@ -4,10 +4,10 @@
     Layout = null;
 }
 
-<div id="modalEntradaSaidaEstoque" class="modal custom-modal-bg" tabindex="-1">
+<div id="modalEntradaEstoque" class="modal custom-modal-bg" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <form id="formEntradaEstoque" method="post" asp-action="EntradaSaidaEstoque">
+            <form id="formEntradaEstoque" method="post" asp-action="EntradaEstoque">
                 <div class="modal-header">
                     <h5 class="modal-title">Entrada/Saída de Estoque</h5>
                 </div>
@@ -15,11 +15,9 @@
                     <div class="mb-1 ">
                         <input asp-for="Id" id="Id" name="Id" type="hidden">
                         <input required asp-for="Data" type="date" class="form-control mb-2" id="Data" placeholder="Data">
-                        <div class="ml-3 mb-2 custom-radio">
-                            <input required asp-for="EntradaOuSaida" value="Entrada" type="radio" class="form-check-input"  name="EntradaOuSaida" id="option1">
-                            <label class="form-check-label" for="option1">Entrada</label>
-                            <input required asp-for="EntradaOuSaida" value="Saida" type="radio" class="form-check-input ml-1"  name="EntradaOuSaida" id="option2">
-                            <label class="form-check-label ml-4" for="option2">Saída</label>
+                        <div class="form-check form-switch">
+                                <input asp-for="EntradaOuSaida" class="form-check-input" type="checkbox" id="EntradaDisabled" checked disabled>
+                                <label class="form-check-label" for="EntradaDisabled">Entrada</label>
                         </div>
                         <input required asp-for="CodigoSistema" type="text" class="form-control mb-2" id="CodigoSistema" placeholder="Código" autofocus>
                         <input required asp-for="Locacao" type="text" class="form-control mb-2" id="Locacao" placeholder="Locação">
