ajustei layout, alguns detalher no modal e agora estou tentando criar um erro para que não cria registro quando for tentando criar uma saida com um codigo que não existe no banco.

--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -13,21 +13,24 @@
 <div id="container" class="container">
         <div class="barra_tarefas">
             <div>
-                <a class="btn btn-outline-secondary ml-1" onClick="ModalEntradaEstoque()">
-                    <img src="~/Images/abrirModalEntrada.png" style="width:40px" />
+                <a class="btn btn-dark border-light ml-1" onClick="ModalEntradaEstoque()">
+                    <img src="~/Images/entrada.png" style="width:40px" />
+                    Entrada
                 </a>
-                <a class="btn btn-outline-secondary ml-1" onClick="ModalSaidaEstoque()">
-                    <img src="~/Images/abrirModalEntrada.png" style="width:40px" />
+                <a class="btn btn-dark border-light ml-1" onClick="ModalSaidaEstoque()">
+                    <img src="~/Images/saida.png" style="width:40px" />
+                    Saída
                 </a>
-                <a class="btn btn-outline-secondary ms-1" type="button" asp-controller="Registro" asp-action="RegistroIndex">
+            <a class="btn btn-dark border-light ms-1" type="button" asp-controller="Registro" asp-action="RegistroIndex">
                     <img src="/Images/abrirRegistro.png" alt="Relogio" class="custom-logo" style="width:43px;" />
+                    Registros
                 </a>
             </div>
 
             <div class="search_bar">
-                <input type="text" id="searchBarPeca" style="height:40px;width:265px;margin-right:5px" class="form-control search" placeholder="Buscar" onkeydown="EnterPeca(event)">
-                <input type="date" id="start-date" style="height:40px;width:150px;margin-right:5px" class="form-control search" placeholder="Data Inicial">
-            <input type="date" id="end-date" style="height:40px;width:150px" class="form-control search" placeholder="Data Final">
+            <input type="text" id="searchBarPeca" style="height:40px;width:265px;margin-right:5px" class="form-control btn-dark border-light search" placeholder="Buscar" onkeydown="EnterPeca(event)">
+            <input type="date" id="start-date" style="height:40px;width:150px;margin-right:5px" class="form-control btn-dark border-light search">
+            <input type="date" id="end-date" style="height:40px;width:150px" class="form-control btn-dark border-light search">
                 <a id="searchIconPecas" onclick="searchIconPecas()">
                     <img src="~/Images/Pesquisa.png" style="width:25px;margin-top:5px;margin-left:5px" />
                 </a>
