--- a/Views/Estoque/Modal/EntradaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaEstoque.cshtml
@@ -4,22 +4,19 @@
     Layout = null;
 }
 
-<div id="modalEntradaEstoque" class="modal custom-modal-bg" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <form id="formEntradaEstoque" method="post" asp-action="EntradaEstoque">
+<div id="modalEntradaEstoque" class="modal" tabindex="-1">
+    <div class="modal-dialog ">
+        <div class="modal-content border-light" style="background-color:#212529;color:white;">
+            <form id="formEntradaEstoque" method="post" asp-action="EntradaEstoque" onsubmit="return validarFormulario(event)">
                 <div class="modal-header">
-                    <h5 class="modal-title">Entrada/Saída de Estoque</h5>
+                    <h5 class="modal-title">Entrada de Estoque</h5>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body" >
                     <div class="mb-1 ">
                         <input asp-for="Id" id="Id" name="Id" type="hidden">
                         <input required asp-for="Data" type="date" class="form-control mb-2" id="Data" placeholder="Data">
-                        <div class="form-check form-switch">
-                                <input asp-for="EntradaOuSaida" class="form-check-input" type="checkbox" id="EntradaDisabled" checked disabled>
-                                <label class="form-check-label" for="EntradaDisabled">Entrada</label>
-                        </div>
-                        <input required asp-for="CodigoSistema" type="text" class="form-control mb-2" id="CodigoSistema" placeholder="Código" autofocus>
+                        <input asp-for="EntradaOuSaida" type="hidden" value="Entrada" id="EntradaDisabled">
+                        <input required asp-for="CodigoSistema" type="text" class="form-control mb-2" id="CodigoSistema" placeholder="Código">
                         <input required asp-for="Locacao" type="text" class="form-control mb-2" id="Locacao" placeholder="Locação">
                         <input required asp-for="Quantidade" value="" type="number" class="form-control mb-2" id="Quantidade" placeholder="Quantidade">
                         <input required asp-for="NotaOuPedido" type="int" class="form-control mb-2" id="NotaOuPedido" placeholder="Nota Fiscal/Pedido">
@@ -30,8 +27,8 @@
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-secondary">Salvar</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-dark border-light">Salvar</button>
+                    <button type="button" class="btn btn-dark border-light" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </form>
         </div>
