--- a/Views/Registro/Modal/DeletarRegistro.cshtml
+++ b/Views/Registro/Modal/DeletarRegistro.cshtml
@@ -6,17 +6,15 @@
 
 <div id="modalDeletarRegistro" class="modal" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <div class="modal-content border-light" style="background-color:#212529;color:white;">
             <form method="post" asp-action="DeletarRegistro">
-                <input asp-for="Id" type="hidden">
-                <div class="modal-header">
-                </div>
-                <div class="modal-body" style="font-weight:650">
+                <div class="modal-body" style="font-weight:570">
                     <p>Tem certeza que deseja excluir?</p>
+                    <input asp-for="Id" type="hidden">
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-secondary">Sim</button>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-dark border-light" id="sim">Sim</button>
+                    <button type="button" class="btn btn-dark border-light" data-bs-dismiss="modal">Cancelar</button>
                 </div>
             </form>
         </div>
