Ainda tentando criar uma mensagem de erro para impedir que o form de saida crie um registro de um codigo que não existe no banco de dados

--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -58,7 +58,7 @@
                     }
             </tr>
         </thead>
-        <tbody id="pecas-list">
+        <tbody id="pecas-list" onload="sortTableChamados(8)">
             @foreach (var item in PecasOrdenados)
             {
                 <tr class="peca-row">
