--- a/Views/Registro/RegistroIndex.cshtml
+++ b/Views/Registro/RegistroIndex.cshtml
@@ -53,7 +53,7 @@
                     }
             </tr>
         </thead>
-        <tbody id="registros-list">
+        <tbody id="registros-list" onload="sortTableChamados(8)">
             @foreach (var item in RegistrosOrdenados)
             {
                 <tr class="registro-row">
