--- a/Views/Estoque/Modal/EntradaEstoque.cshtml
+++ b/Views/Estoque/Modal/EntradaEstoque.cshtml
@@ -7,7 +7,7 @@
 <div id="modalEntradaEstoque" class="modal" tabindex="-1">
     <div class="modal-dialog ">
         <div class="modal-content border-light" style="background-color:#212529;color:white;">
-            <form id="formEntradaEstoque" method="post" asp-action="EntradaEstoque" onsubmit="return validarFormulario(event)">
+            <form id="formEntradaEstoque" method="post" asp-action="EntradaEstoque" >
                 <div class="modal-header">
                     <h5 class="modal-title">Entrada de Estoque</h5>
                 </div>
@@ -21,7 +21,7 @@
                         <input required asp-for="Quantidade" value="" type="number" class="form-control mb-2" id="Quantidade" placeholder="Quantidade">
                         <input required asp-for="NotaOuPedido" type="int" class="form-control mb-2" id="NotaOuPedido" placeholder="Nota Fiscal/Pedido">
                         <input required asp-for="Observacao" type="text" class="form-control mb-2" id="Observacao" placeholder="Observação">
-                        <input required asp-for="Usuario" type="text" class="form-control mb-2" id="Usuario" placeholder="Usuário">
+                        <input asp-for="Usuario" type="text" class="form-control mb-2" id="Usuario" placeholder="Usuário">
                         <input asp-for="Marca" type="text" class="form-control mb-2" id="Marca" placeholder="Marca">
                         <input asp-for="Modelo" type="text" class="form-control mb-2" id="Modelo" placeholder="Modelo">
                     </div>
