Tentativas de concluir a validação do codigoSistema dentro do form de Saida

--- a/Views/Estoque/EstoqueIndex.cshtml
+++ b/Views/Estoque/EstoqueIndex.cshtml
@@ -10,6 +10,7 @@
     var isAdmin = User.IsInRole("Admin");
 }
 
+
 <div id="container" class="container">
         <div class="barra_tarefas">
             <div>
@@ -17,7 +18,7 @@
                     <img src="~/Images/entrada.png" style="width:40px" />
                     Entrada
                 </a>
-                <a class="btn btn-dark border-light ml-1" onClick="ModalSaidaEstoque()">
+                <a class="btn btn-dark border-light ml-1" data-ajax="true" onClick="ModalSaidaEstoque()">
                     <img src="~/Images/saida.png" style="width:40px" />
                     Saída
                 </a>
@@ -51,7 +52,7 @@
                 @if (isAdmin)
                     {
                         <th style="width:1px">
-                            <a>
+                            <a onClick="ModalDeleteAllPeca()">
                                 <i class="bi bi-trash3-fill"></i>
                             </a>
                         </th>
