--- a/Views/Registro/RegistroIndex.cshtml
+++ b/Views/Registro/RegistroIndex.cshtml
@@ -46,7 +46,7 @@
                 @if (isAdmin)
                     {
                         <th style="width:1px">
-                            <a onClick="ModalDeletarAllRegistro()">
+                            <a onClick="ModalDeleteAllRegistro()">
                                 <i class="bi bi-trash3-fill"></i>
                             </a>
                         </th>
